@@ -2,6 +2,7 @@ from __future__ import absolute_import, unicode_literals
 
 import itertools
 
+import django
 from django import template
 from django.conf import settings
 from django.contrib.humanize.templatetags.humanize import intcomma
@@ -20,6 +21,11 @@ from wagtail.wagtailcore.utils import camelcase_to_underscore, escape_script
 register = template.Library()
 
 register.filter('intcomma', intcomma)
+
+if django.VERSION >= (1, 9):
+    assignment_tag = register.simple_tag
+else:
+    assignment_tag = register.assignment_tag
 
 
 @register.inclusion_tag('wagtailadmin/shared/explorer_nav.html')
@@ -93,7 +99,7 @@ def widgettype(bound_field):
             return ""
 
 
-@register.assignment_tag(takes_context=True)
+@assignment_tag(takes_context=True)
 def page_permissions(context, page):
     """
     Usage: {% page_permissions page as page_perms %}
@@ -109,7 +115,7 @@ def page_permissions(context, page):
     return context['user_page_permissions'].for_page(page)
 
 
-@register.assignment_tag(takes_context=True)
+@assignment_tag(takes_context=True)
 def test_page_is_public(context, page):
     """
     Usage: {% test_page_is_public page as is_public %}
@@ -143,12 +149,12 @@ def hook_output(hook_name):
     return mark_safe(''.join(snippets))
 
 
-@register.assignment_tag
+@assignment_tag
 def usage_count_enabled():
     return getattr(settings, 'WAGTAIL_USAGE_COUNT_ENABLED', False)
 
 
-@register.assignment_tag
+@assignment_tag
 def base_url_setting():
     return getattr(settings, 'BASE_URL', None)
 
